# ClientProjetReseau

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  gui.cpp  gui.h  gui.ui  main.cpp
src/: cli.cpp  client.cpp  client.hpp  main.cpp  tui.cpp
tui-client/: main.cpp
